--- a/src/PostgresSQLEventSourceRepository/project.json
+++ b/src/PostgresSQLEventSourceRepository/project.json
@@ -6,8 +6,7 @@
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "Npgsql": "3.1.8",
-    "SharedShippingDomainObjects": "1.0.0-*",
-    "SpotCharterDomain": "1.0.0-*"
+    "BaseDomainOjbect": "1.0.0-*"    
   },
 
   "frameworks": {
