--- a/src/PostgresSQLEventSourceRepository/project.json
+++ b/src/PostgresSQLEventSourceRepository/project.json
@@ -6,7 +6,9 @@
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "Npgsql": "3.1.8",
-    "BaseDomainOjbect": "1.0.0-*"    
+    "BaseDomainObjects": "1.0.0-*",
+    "System.Diagnostics.Process": "4.1.0",
+    "EventDispatcherBase": "1.0.0-*"
   },
 
   "frameworks": {
