--- a/src/PostgresSQLEventSpooler/project.json
+++ b/src/PostgresSQLEventSpooler/project.json
@@ -10,7 +10,8 @@
     "Newtonsoft.Json": "9.0.1",
     "Npgsql": "3.1.8",
     "System.Runtime.Loader": "4.0.0",
-    "BaseDomainOjbect": "1.0.0-*"  
+    "BaseDomainObjects": "1.0.0-*",
+    "MessageBrokerBase": "1.0.0-*"
   },
   "frameworks": {
     "netcoreapp1.0": {
