Review Event class adding AggregateId Created SpotCharterQueryRepository to update MongoDB documents Completed Publish/Consume chain with console applications Dispatcher and ViewUpdaterHost

--- a/src/SpotCharterEventsDispatcher/project.json
+++ b/src/SpotCharterEventsDispatcher/project.json
@@ -12,11 +12,8 @@
       "version": "1.0.1"
     },
     "RabbitMQEventDispatcher": "1.0.0-*",
-    "SharedShippingDomainObjects": "1.0.0-*",
     "SpotCharterDomain": "1.0.0-*",
-    "SpotCharterEventSourceRepository": "1.0.0-*",
-    "SpotCharterQueryRepository": "1.0.0-*",
-    "SpotCharterViewUpdater": "1.0.0-*"
+    "SpotCharterEventSourceRepository": "1.0.0-*"
   },
 
   "frameworks": {
