Added SpotCharterViewModel SpotCharterViewModel implements SpotCharter DTO for basic read operations Managing dispatch of events from Postgres repository implementation Implemented SpotServiceCommandAPI ASP.NET MVC project

--- a/SpotCharterViewModel/project.json
+++ b/SpotCharterViewModel/project.json
@@ -2,10 +2,9 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "BaseDomainObjects": "1.0.0-*",
     "NETStandard.Library": "1.6.0",
-    "Newtonsoft.Json": "9.0.1",
-    "SharedShippingDomainObjects": "1.0.0-*",
-    "SpotCharterDomain": "1.0.0-*"
+    "SharedShippingDomainObjects": "1.0.0-*"
   },
 
   "frameworks": {
