--- a/src/SpotCharterQueryRepository/project.json
+++ b/src/SpotCharterQueryRepository/project.json
@@ -6,7 +6,7 @@
     "MongoDB.Driver": "2.3.0",
     "NETStandard.Library": "1.6.0",
     "SharedShippingDomainObjects": "1.0.0-*",
-    "SpotCharterDomain": "1.0.0-*"
+    "SpotCharterViewModel": "1.0.0-*"
   },
 
   "frameworks": {
