--- a/src/SpotCharterViewUpdater/project.json
+++ b/src/SpotCharterViewUpdater/project.json
@@ -2,12 +2,14 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "AutoMapper": "5.1.1",
     "BaseDomainObjects": "1.0.0-*",
     "EventDispatcherBase": "1.0.0-*",
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "SharedShippingDomainObjects": "1.0.0-*",
-    "SpotCharterDomain": "1.0.0-*"
+    "SpotCharterDomain": "1.0.0-*",
+    "SpotCharterViewModel": "1.0.0-*"
   },
 
   "frameworks": {
