Changed command classes removed private setters general code-review for readability tested API changecharterparty

--- a/SpotServiceCommandAPI/appsettings.json
+++ b/SpotServiceCommandAPI/appsettings.json
@@ -14,7 +14,7 @@
     "database": "SpotCharters",
     "login": "spot_user",
     "password": "spot_user",
-    "applicationName": "SpotRepositoryEvent",
+    "applicationName": "SpotCommandAPI",
     "host": "sql-db",
     "port":  5432
   },
