--- a/SpotServiceQueryAPI/project.json
+++ b/SpotServiceQueryAPI/project.json
@@ -52,7 +52,7 @@
     "include": [
       "wwwroot",
       "**/*.cshtml",
-      "appsettings.json",
+      "appsettings*.json",
       "web.config"
     ]
   },
