Changed Command and CommandHandlers Added Version to Commands Added Login to Events and Commands Completed InMemoryRepository for development Changed unit test configurations to database and message broker

--- a/SpotServiceCommandAPI/project.json
+++ b/SpotServiceCommandAPI/project.json
@@ -21,7 +21,8 @@
     "SpotCharterDomain": "1.0.0-*",
     "SharedShippingDomainObjects": "1.0.0-*",
     "EventDispatcherBase": "1.0.0-*",
-    "SpotCharterService": "1.0.0-*"
+    "SpotCharterService": "1.0.0-*",
+    "InMemoryEventSourceSpotRepository": "1.0.0-*"
   },
 
   "tools": {
