--- a/src/InMemoryEventSourceSpotRepository/project.json
+++ b/src/InMemoryEventSourceSpotRepository/project.json
@@ -2,10 +2,14 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "AutoMapper": "5.1.1",
+    "EventDispatcherBase": "1.0.0-*",
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "SharedShippingDomainObjects": "1.0.0-*",
-    "SpotCharterDomain": "1.0.0-*"
+    "SpotCharterDomain": "1.0.0-*",
+    "SpotCharterViewModel": "1.0.0-*",
+    "System.Linq.Queryable": "4.0.1"
   },
 
   "frameworks": {
