Fixed ValueObject == overload Review service APIs to use in memory repository

--- a/SpotServiceCommandAPI/Properties/launchSettings.json
+++ b/SpotServiceCommandAPI/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SpotServiceCommandAPI": {
+    "SpotServiceAPI": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
