Starting to implement jwt auth

--- a/SpotServiceCommandAPI/project.json
+++ b/SpotServiceCommandAPI/project.json
@@ -22,7 +22,8 @@
     "SharedShippingDomainObjects": "1.0.0-*",
     "EventDispatcherBase": "1.0.0-*",
     "SpotCharterService": "1.0.0-*",
-    "InMemoryEventSourceSpotRepository": "1.0.0-*"
+    "InMemoryEventSourceSpotRepository": "1.0.0-*",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
   },
 
   "tools": {
