--- a/SpotServiceQueryAPI/project.json
+++ b/SpotServiceQueryAPI/project.json
@@ -22,7 +22,8 @@
     "BaseDomainObjects": "1.0.0-*",
     "AutoMapper": "5.1.1",
     "SpotCharterViewModel": "1.0.0-*",
-    "InMemoryEventSourceSpotRepository": "1.0.0-*"
+    "InMemoryEventSourceSpotRepository": "1.0.0-*",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
   },
 
   "tools": {
